# tutorial_2019

./: .gitignore  .gitmodules  .helloworld.cpp.swp  HelloWorld.cpp  README.md  hello_world.cpp
docs/: task.md  (+1 more)
tasks/project/QRcode/: CMakeLists.txt
tasks/project/QRcode/include/: contours.hpp  qrcode.hpp
tasks/project/QRcode/src/: contours.cpp  main.cpp  qrcode.cpp
tasks/project/canny/: CMakeLists.txt
tasks/project/canny/inc/: canny.h
tasks/project/canny/src/: canny.cpp  main.cpp
tasks/week2/: CMakeLists.txt  List.cpp  List.out  ListNode.cpp  ListNode_addTwoNumbers.cpp  ListPlus.cpp  Makefile  My_Readme.md  README.md  README_week2.md  addTwoNumbers.cpp  background_recovery.md  makefile  program.cpp  programming_exercise.md  reademe.md  readme.md  script1.sh  script2.sh  shell_exercise.md  week2_readme.md
tasks/week2/BackgroundRecovery/: Makefile  REDEME.md
tasks/week2/BackgroundRecovery/include/: Recovery.h
tasks/week2/BackgroundRecovery/src/: Recovery.c  main.c
tasks/week2/Background_Recovery/: Makefile  README.md
tasks/week2/Background_Recovery/include/: Recovery.hpp
tasks/week2/Background_Recovery/src/: Recovery.cpp
tasks/week2/Fruit/: CMakeLists.txt  README.md
tasks/week2/Fruit/inc/: CMakeCache.txt  cmake_install.cmake
tasks/week2/Fruit/src/: Recovery.cpp  Recovery.h  opencv_test.cpp
tasks/week2/LinkNode/: ListNodeAdd.cpp  ListNodeAdd.h  README.md  test.cpp
tasks/week2/ListAdd/: listAdd.cpp  listAdd.cpp~
tasks/week2/ListNode/: README.md  addTwoNumbers.cpp
tasks/week2/Programming_Project/: List_Adding.cpp  program_readme.md
tasks/week2/Programming_exercise/: README.md  addTwoNumbers.cpp
tasks/week2/Recovery/: CMakeLists.txt  makefile
tasks/week2/Recovery/inc/: Recovery.h
tasks/week2/Recovery/include/: Recovery.h
tasks/week2/Recovery/src/: Recovery.cpp
tasks/week2/Recovery/test/: demo.cpp  test.cpp
tasks/week2/Recovery_Background/: CMakeLists.txt  Makefile  README.md  test.cpp
tasks/week2/Recovery_Background/include/: Recovery.h
tasks/week2/Recovery_Background/src/: CMakeLists.txt  Recovery.cpp
tasks/week2/Recovery_Project/: CMakeLists.txt  Recovery_readme.md
tasks/week2/Recovery_Project/include/: Recovery.h
tasks/week2/Recovery_Project/src/: Recovery.cpp
tasks/week2/Recovery_Project/test/: test.cpp
tasks/week2/VideoProcess/: .Readme.md.swp  CMakeLists.txt  Readme.md
tasks/week2/VideoProcess/include/: Recovery.h
tasks/week2/VideoProcess/src/: Recovery.cpp  main.cpp
tasks/week2/backgroundRecovery/: README.md  makefile
tasks/week2/backgroundRecovery/include/: Recovery.h
tasks/week2/backgroundRecovery/src/: Recovery.cpp  main.cpp
tasks/week2/backgroundRecovery_project/: CMakeLists.txt  Makefile  README.md
tasks/week2/backgroundRecovery_project/include/: Recovery.h
tasks/week2/backgroundRecovery_project/src/: Recovery.cpp  main.cpp
tasks/week2/background_recovery/: README.md  makefile
tasks/week2/background_recovery/inc/: Recovery.h
tasks/week2/background_recovery/include/: Recovery.h
tasks/week2/background_recovery/src/: Recovery.cpp  test.cpp
tasks/week2/background_recovery/test/: test.cpp
tasks/week2/inc/: Recovery.h
tasks/week2/include/: Recovery.h  Recovery.hpp
tasks/week2/list_programming_exercise/: list  list.cpp  list.h  main.cpp
tasks/week2/myRecoveryFinal/: CMakeLists.txt  README.md
tasks/week2/myRecoveryFinal/include/: Recovery.h
tasks/week2/myRecoveryFinal/result/: video0-ubuntu-running-time.txt  video0-windows-running-time.txt  video1-ubuntu-running-time.txt  video1-windows-running-time.txt  video2-ubuntu-running-time.txt  video2-windows-running-time.txt
tasks/week2/myRecoveryFinal/src/: Recovery.cpp  main.cpp
tasks/week2/programming_exercise/: README.md  Week2_programming_exercise.cpp  addTwoNumbers.cpp  listAddtion.cpp
tasks/week2/programming_exersize/: README.md  makefile
tasks/week2/programming_exersize/include/: ListNode.h
tasks/week2/programming_exersize/src/: addTwoNumbers.cpp  main.cpp
tasks/week2/recovery/: week2_README.md
tasks/week2/recovery/src/: Makefile  recovery.cpp  recovery.h
tasks/week2/resource/: .test6.cpp.swp
tasks/week2/shell_exercise/: homework1.sh  homework2.sh  one.sh  test1.sh  test2.sh  two.sh  work1.sh  work2.sh
tasks/week2/src/: Recovery.cpp  main.cpp
tasks/week2/task_submit/: .gitignore  Makefile  Makefile.r  chainadd.cpp  scbg.cpp  scbg2.cpp  scbg3.cpp  scbg4  scbg4.cpp  scbg5  scbg5.cpp  scbg6  scbg6.cpp
tasks/week2/task_submit/program_exercise/: ListNode.h  READMD.md  chainadd.cpp
tasks/week2/task_submit/recovery/: Makefile  README.md  Recovery.cpp
tasks/week2/task_submit/recovery/include/: Recovery.h  timer.h
tasks/week2/task_submit/recovery/src/: Recovery.cpp  main.cpp  timer.cpp
tasks/week2/task_submit/shell_exercise/: 1.sh  2.sh
tasks/week2/test/: test.cpp
tasks/week2/video_recovery/: Makefile
tasks/week2/video_recovery/inc/: recovery.h
tasks/week2/video_recovery/src/: main.cpp  recovery.cpp
tasks/week3/catkin_ws/src/pub_sub/: CMakeLists.txt  package.xml
tasks/week3/catkin_ws/src/pub_sub/launch/: pub_sub.launch
tasks/week3/catkin_ws/src/pub_sub/src/: publisher.cpp  subscriber.cpp
tasks/week3/catkin_ws/src/srv_cli/: CMakeLists.txt  package.xml
tasks/week3/catkin_ws/src/srv_cli/cfg/: dynamic_param.cfg
tasks/week3/catkin_ws/src/srv_cli/launch/: srv_cli.launch
tasks/week3/catkin_ws/src/srv_cli/src/: client.cpp  dynamic_param_server.cpp  server.cpp
tasks/week3/catkin_ws/src/srv_cli/srv/: LessThan.srv
tasks/week3/ros_project/src/topic/: CMakeLists.txt  package.xml
tasks/week3/ros_project/src/topic/launch/: topic.launch
tasks/week3/ros_project/src/topic/msg/: myMsg.msg
tasks/week3/ros_project/src/topic/src/: Publisher.cpp  Subscriber.cpp
tasks/week3/test_project/src/test_pkg/: CMakeLists.txt  package.xml
tasks/week3/test_project/src/test_pkg/launch/: judge.launch  talker_listener.launch
tasks/week3/test_project/src/test_pkg/src/: judge_client.cpp  judge_service.cpp  listener.cpp  talker.cpp
tasks/week3/test_project/src/test_pkg/srv/: JudgeServiceMsg.srv
(+630 files in other folders)
