CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

PROJECT(Recovery)

set(Opencv_DIR /home/lhz/opencv-3.4.1/build)

FIND_PACKAGE(Opencv REQUIRED)

INCLUDE_DIRECTORIES(inc)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

AUX_SOURCE_DIRECTORY(src SRC_LIST)

ADD_EXECUTABLE(recovery ${SRC_LIST})

TARGET_LINK_LIBRARIES(recovery ${OpenCV_LIBS})


