PROJECT(image_procession)

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")  

FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(
    ${OpenCV_INCLUDE_DIRS}
    ${CMAKE_SOURCE_DIR}/include
)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/src SRC_LIST)
ADD_LIBRARY(process_lib ${SRC_LIST})
LINK_LIBRARIES(process_lib)

ADD_EXECUTABLE(main ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp )
TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS} process_lib)

