CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(Qrcode)

set(Opencv_DIR /home/usr/opencv/release)

FIND_PACKAGE(Opencv REQUIRED)

INCLUDE_DIRECTORIES(inc)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

AUX_SOURCE_DIRECTORY(src SRC_LIST)

ADD_EXECUTABLE(Qrcode ${SRC_LIST})

TARGET_LINK_LIBRARIES(Qrcode ${OpenCV_LIBS})
